--- a/src/HourGlassBackground.css
+++ b/src/HourGlassBackground.css
@@ -7,7 +7,7 @@
   z-index: -1;
   pointer-events: none;
   overflow: hidden;
-  background: rgb(0, 0, 0);
+ 
 }
 
 @keyframes fallAndPile {
